# recpt1-gst

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac
debian/: README.Debian  README.source  changelog  control  copyright  postinst  prerm  rules  watch
po/: ChangeLog
src/: Makefile.am  Makefile.in  configs.c  configs.h  recdvb.1  recdvb.1.xml  recdvb.c  recdvbrc
