SUBDIRS= po src

EXTRA_DIST=autogen.sh

ACLOCAL_AMFLAGS = -I m4

DIST_COMMON = INSTALL NEWS README.md AUTHORS ChangeLog \
	      $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
	      $(top_srcdir)/configure $(am__configure_deps) \
	      $(srcdir)/config.h.in ABOUT-NLS COPYING compile config.guess \
	      config.rpath config.sub depcomp install-sh missing ltmain.sh
